<resources>
    <string name="app_name">Gasto-viagem</string>
    <string name="total_km">Total de quilômetro</string>
    <string name="distance">Distância</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KMs por litro</string>
    <string name="total_expenditure">Seu gasto total será de:</string>
    <string name="value">R$ 0</string>
    <string name="calcule">CALCULAR</string>

    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>